gcc/testsuite/rust/rustc/ui/parser/issues/issue-99625-enum-struct-mutually-exclusive_dg.rs
//@ run-rustfix

pub enum struct Range {
// { dg-error "" "" { target *-*-* } .-1 }
    Valid {
        begin: u32,
        len: u32,
    },
    Out,
}

fn main() {
}

